fixed header logo too big in home

--- a/css/style.css
+++ b/css/style.css
@@ -991,7 +991,7 @@
 		background-size: 25em, 25em, auto, cover;
 		color: white;
 		cursor: default;
-		padding: 6em 0;
+		padding: 3em 0;
 		text-align: center;
 	}
 		#banner .inner {
@@ -1008,26 +1008,21 @@
 			color: white;
 			display: inline-block;
 			opacity: 0;  /* not visible before fade-in */
-			padding: 3em;
+			padding: 1em 0;
 			text-align: center;
 		}
-
-			#banner .inner header {
-				margin: 0 0 2em 0;
-				padding: 3px 0 3px 0;
+		
+			#banner .inner header h2 {
+				border-bottom: solid 2px;
+				border-top: solid 2px;
+				font-size: 2.5em;
+				font-weight: 900;
+				letter-spacing: 0.2em;
+				margin: 0;
+				padding-left: 0.05em;
+				position: relative;
+				text-transform: uppercase;
 			}
-
-				#banner .inner header h2 {
-					border-bottom: solid 2px;
-					border-top: solid 2px;
-					font-size: 2.5em;
-					font-weight: 900;
-					letter-spacing: 0.2em;
-					margin: 0;
-					padding-left: 0.05em;
-					position: relative;
-					text-transform: uppercase;
-				}
 
 			#banner .inner p {
 				letter-spacing: 0.1em;
